# mkcheck

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
mkcheck/: syscall.cpp
test/make/: Makefile
test/parallel/: Makefile
tools/fuzz_test/: __main__.py  graph.py  mtime.py  proc.py
